<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/informaci_n_del_carro"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textNombreCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleInfo"
        android:layout_marginEnd="5dp"
        android:text="@string/nombre_del_carro"
        android:textColor="@color/colorPrimary"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtNombreCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleInfo"
        android:layout_toEndOf="@+id/textNombreCarro"
        android:text="@string/no_conectado"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textTipoTarjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNombreCarro"
        android:layout_marginEnd="5dp"
        android:text="@string/tipo_de_tarjeta"
        android:textColor="@color/colorPrimary"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtTipoTarjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNombreCarro"
        android:layout_toEndOf="@+id/textTipoTarjeta"
        android:text="@string/no_conectado"
        android:visibility="gone" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/control_remoto"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title">

        <RelativeLayout
            android:id="@+id/indicatorsUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/analogueUpDown"
            android:layout_alignEnd="@+id/analogueUpDown"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/circleAtras"
                android:layout_width="30dp"
                android:layout_height="30dp"

                android:layout_toEndOf="@+id/circleAdelante"
                android:contentDescription="@string/indicador_adelante"
                android:src="@drawable/circle_energy"
                app:tint="@color/gris" />

            <ImageView
                android:id="@+id/circleAdelante"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/indicador_adelante"
                android:src="@drawable/circle_energy"
                app:tint="@color/gris" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/indicatorsRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/analogueLeftRigth"
            android:layout_alignEnd="@+id/analogueLeftRigth"
            android:gravity="center_horizontal">

            <ImageView

                android:id="@+id/arrowRigth"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toEndOf="@+id/arrowLeft"
                android:contentDescription="@string/indicador_adelante"
                android:src="@drawable/ic_arrow_right"
                app:tint="@color/gris" />

            <ImageView
                android:id="@+id/arrowLeft"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/indicador_adelante"
                android:rotation="180"
                android:src="@drawable/ic_arrow_right"
                app:tint="@color/gris" />

        </RelativeLayout>


        <com.mc.controlbluetooth.AnalogueView
            android:id="@+id/analogueUpDown"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="100dp" />

        <TextView
            android:id="@+id/textUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/analogueUpDown"
            android:layout_alignStart="@+id/analogueUpDown"
            android:layout_alignEnd="@+id/analogueUpDown"
            android:layout_marginTop="10dp"
            android:text="@string/cent"
            android:textAlignment="center" />

        <com.mc.controlbluetooth.AnalogueView
            android:id="@+id/analogueLeftRigth"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="100dp" />

        <TextView
            android:id="@+id/textLR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/analogueLeftRigth"
            android:layout_alignStart="@+id/analogueLeftRigth"
            android:layout_alignEnd="@+id/analogueLeftRigth"
            android:layout_marginTop="10dp"
            android:text="@string/cent"
            android:textAlignment="center" />

        <me.ibrahimsn.lib.Speedometer
            android:id="@+id/speedMeter"
            android:layout_width="270dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            app:borderColor="#402c47"
            app:borderSize="8dp"
            app:fillColor="#d83a78"
            app:maxSpeed="100"
            app:metricText="km/h"
            app:textColor="#000000" />

    </RelativeLayout>


</RelativeLayout>